crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__clear_billing_contact.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
expression: clear_response
---
{
  "data": {
    "setBillingContact": {
      "contact": {
        "address": null,
        "email": null,
        "name": null
      }
    }
  }
}
