crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__cross_tenant_delete_denied.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 337
expression: cross_tenant_delete_response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 27,
          "line": 3
        }
      ],
      "message": "payment method not found",
      "path": [
        "deleteBillingPaymentMethod"
      ]
    }
  ]
}
