crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__cross_tenant_set_billing_contact_denied.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
expression: cross_tenant_response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 27,
          "line": 3
        }
      ],
      "message": "PermissionDenied: contacttest@example.test is not authorized to access prefix or name 'contactvictim/' with required capability EditBilling",
      "path": [
        "setBillingContact"
      ]
    }
  ]
}
