crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__delete_default_payment_method.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 321
expression: delete_default_response
---
{
  "data": {
    "deleteBillingPaymentMethod": {
      "paymentMethods": [
        {
          "id": "pm_1"
        }
      ],
      "primaryPaymentMethod": {
        "id": "pm_1"
      }
    }
  }
}
