crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__mask_create_billing_setup_intent_billing.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 571
expression: response
---
{
  "data": {
    "createBillingSetupIntent": {
      "clientSecret": "seti_mock_1_secret_test"
    }
  },
  "errors": null
}
