crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__mask_create_billing_setup_intent_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 581
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "PermissionDenied: masktenant@example.test is not authorized to access prefix or name 'masktenant/' with required capability EditBilling",
      "path": [
        "createBillingSetupIntent"
      ]
    }
  ]
}
