crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__mask_delete_billing_payment_method_billing.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 695
expression: response
---
{
  "data": {
    "deleteBillingPaymentMethod": {
      "paymentMethods": [],
      "primaryPaymentMethod": null
    }
  },
  "errors": null
}
