crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__mask_set_billing_contact_billing.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 655
expression: response
---
{
  "data": {
    "setBillingContact": {
      "contact": {
        "email": "billing@example.test",
        "name": "Mask Corp"
      }
    }
  },
  "errors": null
}
