crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__mask_set_billing_payment_method_billing.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 611
expression: response
---
{
  "data": {
    "setBillingPaymentMethod": {
      "paymentMethods": [
        {
          "id": "pm_1"
        }
      ],
      "primaryPaymentMethod": {
        "id": "pm_1"
      }
    }
  },
  "errors": null
}
